fix resolved responsive issue on mobile

--- a/myStyle.css
+++ b/myStyle.css
@@ -7,6 +7,14 @@
     --footer-color : rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
+body{
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+}
+
 .bg-fixed{
     color: aliceblue;
     background-image: url('hero-bg.svg');
@@ -14,6 +22,7 @@
     background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
 }
 
 .hero-section{
@@ -98,8 +107,8 @@
     margin: auto;
     align-items: center;
     width: 100%;
-    max-width: 30rem;
-    height: 50%;
+    max-width: 25rem;
+    height: 40%;
 }
 
 .aboutme-para{
@@ -124,6 +133,7 @@
     justify-content: center;
     list-style-type: none;
     font-size: 1.5rem;
+    padding-left: 0%;
 }
 
 .skill-item{
